# regional-agent-hack

./: .gitignore  .runtime_log.txt  README.md  README.md.rej  bbox_preview.html  dataset-metadata.json  environment.yml  fix_from_codex.patch  make_submission.py  pyproject.toml  repo_structure.txt  requirements.txt  run_pipeline.py  situated-insight-full-fetch-random-forest-train.ipynb  submission.csv  textonly.diff
.github/: add_kaggle_metadata_enrichment.py  copilot-instructions.md
agent/: __init__.py  feature_extract.py  insight_engine.py  rag_retriever.py  rule_engine.py
b/: .gitignore
config/: climate_zone_lookup.py  crop_library.yml  crop_variable_map.py  insight.austin_farmland.yml  insight.hungary_farmland.yml  last_category.txt
docs/: README.md  architecture_diagram.mmd  caching_layers.md  design_notes.md  greenai_metrics.md  greenai_metrics.md.rej  regional_config_guide.md  submission_notes.md.rej
engine/: __init__.py  distill_insights.py  evaluate_greenai.py  model_predict.py  visualize.py
logs/: austin_farmland_file_report.csv
models/: README.md  houston_farmland_rf_feature_importances.csv
notebooks/: pipeline_demo.ipynb  pipeline_demo.md  regional_agent_kaggle.ipynb  regional_agent_training.ipynb
regions/: README.md
rf_training_lib/: __init__.py  evaluator.py  model_utils.py  preprocessing.py  trainer.py
scripts/: __init__.py  _shared.py  add_kaggle_metadata_enrichment.py  baselines.py  build_context_layers.py  build_rag_context.py  build_region_cache.py  build_region_insights.py  build_training_window.py  compute_anomalies.py  (+19 more)
(+125 files in other folders)
