[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "situated-insight"
version = "0.1.0"
description = "Regional climate insight agent template"
authors = [{ name = "Morgan Urich" }]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
